--- a/data/home/brands.yaml
+++ b/data/home/brands.yaml
@@ -7,5 +7,5 @@ content:
     - "images/conatel.png"
     - "images/gobierno.png"
     - "images/csj.png"
-    - "images/brands-spotify.png"
-    - "images/brands-dropbox.png"
+    - "images/economia.png"
+    - "images/sectigo.png"
